--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "test:watch": "jest --watch",
     "test:ci": "jest --runInBand",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "cy:run": "cypress run",
+    "e2e:ci": "start-server-and-test start http://localhost:4200 cy:run",
+    "ci": "ng lint && npm run test:ci && npm run e2e:ci && ng build"
   },
   "private": true,
   "dependencies": {
@@ -31,20 +34,19 @@
     "@angular-devkit/build-angular": "~0.1102.1",
     "@angular/cli": "~11.2.1",
     "@angular/compiler-cli": "~11.2.1",
+    "@briebug/cypress-schematic": "^4.4.0",
+    "@cypress/webpack-preprocessor": "5.6.0",
     "@types/jasmine": "~3.6.0",
+    "@types/jest": "^26.0.20",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
+    "cypress": "^6.5.0",
+    "jest": "^26.6.3",
+    "jest-preset-angular": "^8.3.2",
+    "start-server-and-test": "^1.12.0",
+    "ts-loader": "8.0.17",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.1.2",
-    "@types/jest": "^26.0.20",
-    "jest": "^26.6.3",
-    "jest-preset-angular": "^8.3.2"
-  },
-  "jest": {
-    "preset": "jest-preset-angular",
-    "setupFilesAfterEnv": [
-      "<rootDir>/src/setupJest.ts"
-    ]
+    "typescript": "~4.1.2"
   }
 }
