--- a/package.json
+++ b/package.json
@@ -16,15 +16,16 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.2.1",
-    "@angular/cdk": "^11.2.1",
     "@angular/common": "~11.2.1",
     "@angular/compiler": "~11.2.1",
     "@angular/core": "~11.2.1",
     "@angular/forms": "~11.2.1",
-    "@angular/material": "^11.2.1",
+    "@angular/localize": "~11.2.1",
     "@angular/platform-browser": "~11.2.1",
     "@angular/platform-browser-dynamic": "~11.2.1",
     "@angular/router": "~11.2.1",
+    "@ng-bootstrap/ng-bootstrap": "^9.0.2",
+    "bootstrap": "^4.5.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
@@ -35,7 +36,6 @@
     "@angular/compiler-cli": "~11.2.1",
     "@briebug/cypress-schematic": "^4.4.0",
     "@cypress/webpack-preprocessor": "5.6.0",
-    "@types/jasmine": "~3.6.0",
     "@types/jest": "^26.0.20",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
